# my-chatbot-app

./: .gitignore  Agents.md  ReadMe.md
backend/: agent.py  app.py  log_setting.py  openapi.json  pyproject.toml
backend/test/: conftest.py  test_agent_integration.py  test_api.py
backend/tools/: create_schema.py
frontend/: .env.sample  .gitignore  README.md  next.config.ts  orval.config.ts  package-lock.json  package.json  playwright.config.ts
frontend/app/: layout.tsx  page.tsx  providers.tsx
frontend/app/[thread_id]/: page.tsx
frontend/components/assistant-ui/: custom-thread-list.tsx  markdown-text.tsx  sidebar.tsx  thread.tsx
frontend/components/ui/: theme-toggle.tsx
frontend/lib/: assistant-runtime.ts  axios-config.ts  sidebar-store.ts
frontend/lib/api/default/: default.ts
frontend/lib/api/model/: hTTPValidationError.ts  index.ts  message.ts  messageId.ts  renameThreadRequest.ts  renameThreadResponse.ts  renameThreadResponseMessage.ts  searchRequest.ts  searchRequestMessageId.ts  searchRequestThreadId.ts  searchResponse.ts  searchResponseMessageId.ts  threadListResponse.ts  threadMetadata.ts  threadResponse.ts  validationError.ts  validationErrorLocItem.ts
