[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.125.0",
    "langchain>=1.2.0",
    "langchain-ollama",
    "langgraph>=1.0.5",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "uvicorn>=0.38.0",
    "deepagents",
    "langchain-tavily",
    "langchain-google-genai",
    "sqlmodel",
    "tavily-python",
    "structlog",
    "colorama",
    "rich",
]

[dependency-groups]
dev = ["httpx>=0.27.0", "pytest>=9.0.2", "pytest-asyncio>=1.3.0", "ruff>=0.6.0"]

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["."]
[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
